<resources>
    <string name="app_name">NexTodo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Create account</string>
    <string name="dont_have_account">Don’t have an account? </string>
    <string name="have_account">Already have an account? </string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome to NexTask</string>
    <string name="lets_get_started">Organize your tasks easily.</string>
    <string name="create_account_title">Create your account</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
